Closed Bug 1645587 Opened 5 years ago Closed 5 years ago

gfx/tests/mochitest/test_font_whitelist.html crashes on Linux and Android when shared font-list is enabled

Categories

(Core :: Layout: Text and Fonts, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox77 --- unaffected
firefox78 --- unaffected
firefox79 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This was an oversight in the patch for bug 1644285; we need a null-check in case the font family name has been excluded from the available list.

(Actually, the code was broken prior to that patch, but probably wouldn't immediately crash, it would just store an invalid family index and the font name would be unusable.)

Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a4dda3c5b7bf Add missing null-check for family in FontList::SetLocalNames, in case font families are blocked by the font whitelist or visibility prefs. r=jwatt
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

Set release status flags based on info from the regressing bug 1644285

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: