Bug 1645587 - Add missing null-check for family in FontList::SetLocalNames, in case font families are blocked by the font whitelist or visibility prefs. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D79595